# fliplibs

./: .gitignore  Makefile  README.md
algo-box/: #Makefile.am#  Makefile.am  README  configure.ac
algo-box/demo/: array.cpp  arraystack.cpp  dualqueue.cpp  fastarraystack.cpp  graph.cpp  queue.cpp  queuedll.cpp  queuell.cpp  rootisharrstk.cpp  stack.cpp  stackll.cpp
algo-box/include/: Array.h  ArrayList.h  Graph.h  LinkedList.h
angular/: controller.html  hello.html  objects.html
angular/angular-tour-of-heroes/: package-lock.json  package.json
angular/angular-tour-of-heroes/src/app/: app-routing.module.ts  hero.service.ts
angular/angular-tour-of-heroes/src/app/heroes/: heroes.component.ts
angular/hello-world/: angular_notes.txt  package-lock.json  package.json
angular/hello-world/src/app/: app.component.spec.ts
autotools_test/: Makefile.am  configure.ac
autotools_test/lib/: funlib.cpp
autotools_test/src/: hello.cpp
bcc_tests/: Makefile.am  configure.ac
bcc_tests/demo/: argdist_test.cpp  memleak_test.cpp  signal_11_test.cpp  struct_timespec.h  usdt_test.cpp
bcc_tests/include/: bcc_helper.h
bcc_tests/libsrc/: bcc_helper.cpp
debug_lib/: Makefile  Makefile.am  autogen.sh  configure.ac
debug_lib/include/: Makefile  debug.h
debug_lib/libsrc/: Makefile  debug.cpp
ec_crypto/: Makefile  Makefile.am  README  Readme.txt  cert.pem  ec-priv.pem  ec-pub.pem  myprivkey.pem
ec_crypto/demo/: Makefile  ec_sslclient.cpp  ec_sslserver.cpp  pubfrompriv.cpp
ec_crypto/include/: Makefile  elliptic_curve.h
ec_crypto/lib/: Makefile  elliptic_curve.cpp
ec_crypto/tests/: Makefile  test_pubfrompriv.cpp  testf_der_pubfrompriv.cpp  testf_pubfrompriv.cpp  testf_vals_pubfrompriv.cpp
html5/: faq_notes_on_html5.txt  helloworld.html
html5/css/: boxmodel.html  csssyntax.html  font.html  outline.html  style1.html  style10.html  style11.html  style12.html  style13.html  style14.html  style15.html  style16.html  style2.html  style3.html  style4.html  style5.html  style6.html  style7.html  style8.html  style9.html  text.html
html5/jscript/: getElement.html  getElement2.html  hellojs.html  jsonp.html  jsonp.html.bak  jsonp.html.working  jsonp.js  myGoogleMap.html  myLoc.html  myLoc.js  myLocTrack.html  myLocTrack.js  object_movies.html  object_movies.js  playlist.html  playlist.js  playlist_store.html  playlist_store.js  sales.css  sales.json  webserv.css  webserv.html  webserv.js
ipc_lib/: Makefile  Makefile.am
ipc_lib/include/: IPC.h  Makefile
ipc_lib/lib/: IPC.cpp  Makefile
ipc_lib/src/: Makefile  agent.cpp  createmb.cpp  dumpshm.cpp  recvagent.cpp  sendagent.cpp  sendbig_agent.cpp  sysv_createmb.cpp  sysv_recvagent.cpp  sysv_sendagent.cpp
mongodb_demo/: Makefile  Makefile.am  README  autogen.sh  configure.ac
mongodb_demo/demo/: Makefile  mongodb_readme.txt  mongoinsert.cpp  mongoquery.cpp  mongoread.cpp  mongotest.cpp
node-js/: AndroidManifest.xml  BeaconActivityInterface.java  BeaconApplicationContext.java  BeaconData.java  BeaconViewAdapter.java  FileToQueHandler.js  HandleGetFileProcessPage.js  HandleGetHtmlPage.js  HandleGetImage.js  HandleGetIndex.js  HandleGetJson.js  HandleGetPromotions.js  HandleMoveQueToQue.js  HandlePageNotFound.js  HandlePostAction.js  HttpServer.js  HttpServerContext.js  HttpsServer.js  MainActivity.java  MyApplication.java  StaticFileServer.js  VolleyRequestor.java  activity_main.xml  beacon_merchant.json  certificate.pem  certrequest.csr  cleanque.js  colors.xml  deletecol.js  dimens.xml  filetocollection.js  filetoque.js  filetoqueparam.js  index.html  merchant_promotions.json  merchant_promotions_addone.json  msg.json  mvquetoque.js  mvquetoqueparam.js  postExampleVolley.java  (+11 more)
opendsa/: Makefile.am  autogen.sh  configure.ac  faq_opendsa.txt
opendsa/include/: revafile.h
opendsa/src/: bag.cpp  btf.py  btfdupl.py  btffewdupl.py  evenandodd.cpp  fifty.cpp  fortytwo.cpp  matchstr.cpp  nofirst.cpp  printalldup.cpp  randlist.cpp  revafile.cpp  revastack.cpp  test.txt  uniq.cpp  uniqsorted.cpp
socket_lib/: Makefile  Makefile.am
socket_lib/config/: mytcpmux.conf
socket_lib/demo/: Makefile  client_tcp.cpp  client_tcp_hb.cpp  client_tcp_nl.cpp  client_tcpnw.cpp  client_tcpstnw.cpp  client_tcptest.cpp  client_tcpvarnw.cpp  client_udp.cpp  client_udptest.cpp  endianchk.cpp  extsys.cpp  mykeep.cpp  mykeep2.cpp  mytcpmux.cpp  mytcpmux_client.cpp  nowait_struct.h  rlnumd.cpp  server_tcp.cpp  server_tcp_hb.cpp  server_tcp_nl.cpp  server_tcpnw.cpp  server_tcpstnw.cpp  server_tcptest.cpp  server_tcpvarnw.cpp  server_udp.cpp  server_udptest.cpp  shutdownc.cpp  sslbioclient.cpp  sslbioserver.cpp  sslclient.cpp  sslserver.cpp  tcpecho.cpp  try.cpp  tryset.cpp  tryset2.cpp  udpclient.cpp  udpecho1.cpp  udpecho2.cpp  xout1.cpp  (+2 more)
socket_lib/include/: Makefile  Socket.h  heartbeat.h  skel.h
socket_lib/lib/: Makefile  Socket.cpp
socket_lib/shell/: mp.sh
threads_lib/: Makefile  Makefile.am
threads_lib/demo/: Makefile  cancelthread.cpp  manythreads.cpp  simpledemo.cpp  twothreads.cpp
threads_lib/include/: Makefile  Threads.h
threads_lib/lib/: Makefile  Threads.cpp
